--- a/views/game.html
+++ b/views/game.html
@@ -1,6 +1,14 @@
 <head>
-    <script src="../src/index.js"></script>
+    <script src="../src/indexServer.js"></script>
+    <script src="../src/indexClient.js"></script>
 </head>
+<body>
+    <div id="write">
+        <p>Pseudo: </p>
+    </div>
+</body>
+
+
 <style>
 body {
     text-align: center;
