change id from div in game for pseudo

--- a/views/game.html
+++ b/views/game.html
@@ -3,7 +3,7 @@
     <script src="../src/indexClient.js"></script>
 </head>
 <body>
-    <div id="write">
+    <div id="pseudo_in_game">
         <p>Pseudo: </p>
     </div>
 </body>
